--- a/msvscpp/Makefile.am
+++ b/msvscpp/Makefile.am
@@ -1,5 +1,9 @@
 MSVSCPP_FILES = \
+	fsxfs_test_btree_block/fsxfs_test_btree_block.vcproj \
+	fsxfs_test_btree_header/fsxfs_test_btree_header.vcproj \
 	fsxfs_test_error/fsxfs_test_error.vcproj \
+	fsxfs_test_inode_btree/fsxfs_test_inode_btree.vcproj \
+	fsxfs_test_inode_information/fsxfs_test_inode_information.vcproj \
 	fsxfs_test_io_handle/fsxfs_test_io_handle.vcproj \
 	fsxfs_test_notify/fsxfs_test_notify.vcproj \
 	fsxfs_test_superblock/fsxfs_test_superblock.vcproj \
