Worked on library and format support

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -18,6 +18,8 @@ coverage:
     - "libcthreads/*"
     - "libfcache/*"
     - "libfdata/*"
+    - "libfdatetime/*"
     - "libfguid/*"
+    - "libhmac/*"
     - "libuna/*"
     - "tests/*"
