--- a/libfsxfs.ini
+++ b/libfsxfs.ini
@@ -11,6 +11,7 @@ description: "Library to support the X File System (XFS) format"
 public_types: ["file_entry", "volume"]
 
 [tools]
+build_dependencies: ["crypto"]
 description: "Several tools for reading X File System (XFS) volumes"
 names: ["fsxfsinfo"]
 
