--- a/libfsxfs/Makefile.am
+++ b/libfsxfs/Makefile.am
@@ -13,6 +13,7 @@ AM_CPPFLAGS = \
 	@LIBBFIO_CPPFLAGS@ \
 	@LIBFCACHE_CPPFLAGS@ \
 	@LIBFDATA_CPPFLAGS@ \
+	@LIBFDATETIME_CPPFLAGS@ \
 	@LIBFGUID_CPPFLAGS@ \
 	@PTHREAD_CPPFLAGS@ \
 	@LIBFSXFS_DLL_EXPORT@
@@ -20,16 +21,27 @@ AM_CPPFLAGS = \
 lib_LTLIBRARIES = libfsxfs.la
 
 libfsxfs_la_SOURCES = \
+	fsxfs_block_directory.h \
 	fsxfs_btree.h \
 	fsxfs_inode.h \
 	fsxfs_inode_information.h \
 	fsxfs_superblock.h \
 	libfsxfs.c \
+	libfsxfs_block_data_handle.c libfsxfs_block_data_handle.h \
+	libfsxfs_block_directory.c libfsxfs_block_directory.h \
+	libfsxfs_block_directory_footer.c libfsxfs_block_directory_footer.h \
+	libfsxfs_block_directory_header.c libfsxfs_block_directory_header.h \
 	libfsxfs_btree_block.c libfsxfs_btree_block.h \
 	libfsxfs_btree_header.c libfsxfs_btree_header.h \
+	libfsxfs_buffer_data_handle.c libfsxfs_buffer_data_handle.h \
 	libfsxfs_debug.c libfsxfs_debug.h \
 	libfsxfs_definitions.h \
+	libfsxfs_directory.c libfsxfs_directory.h \
+	libfsxfs_directory_entry.c libfsxfs_directory_entry.h \
+	libfsxfs_directory_table.c libfsxfs_directory_table.h \
+	libfsxfs_directory_table_header.c libfsxfs_directory_table_header.h \
 	libfsxfs_error.c libfsxfs_error.h \
+	libfsxfs_extent.c libfsxfs_extent.h \
 	libfsxfs_extern.h \
 	libfsxfs_file_entry.c libfsxfs_file_entry.h \
 	libfsxfs_file_system.c libfsxfs_file_system.h \
@@ -69,6 +81,7 @@ libfsxfs_la_LIBADD = \
 	@LIBBFIO_LIBADD@ \
 	@LIBFCACHE_LIBADD@ \
 	@LIBFDATA_LIBADD@ \
+	@LIBFDATETIME_LIBADD@ \
 	@LIBFGUID_LIBADD@ \
 	@PTHREAD_LIBADD@
 
