--- a/libfsxfs/libfsxfs_definitions.h.in
+++ b/libfsxfs/libfsxfs_definitions.h.in
@@ -77,45 +77,18 @@ enum LIBFSXFS_FILE_TYPES
 	LIBFSXFS_FILE_TYPE_BLOCK_DEVICE					= 0x6000,
 	LIBFSXFS_FILE_TYPE_REGULAR_FILE					= 0x8000,
 	LIBFSXFS_FILE_TYPE_SYMBOLIC_LINK				= 0xa000,
-	LIBFSXFS_FILE_TYPE_SOCKET					= 0xc000,
-};
-
-/* The extent flag definitions
- */
-enum LIBFSXFS_EXTENT_FLAGS
-{
-	/* The extent is sparse
-	 */
-	LIBFSXFS_EXTENT_FLAG_IS_SPARSE					= 0x00000001UL
+	LIBFSXFS_FILE_TYPE_SOCKET					= 0xc000
 };
 
 #endif /* !defined( HAVE_LOCAL_LIBFSXFS ) */
 
-/* The incompatible features flags
+/* The fork types
  */
-enum LIBFSXFS_INCOMPATIBLE_FEATURES_FLAGS
+enum LIBFSXFS_FORK_TYPES
 {
-	LIBFSXFS_INCOMPATIBLE_FEATURES_FLAG_64BIT_SUPPORT		= 0x00000080UL,
+	LIBFSXFS_FORK_TYPE_INLINE_DATA					= 1,
+	LIBFSXFS_FORK_TYPE_EXTENTS					= 2
 };
-
-/* The inode flags types
- */
-enum LIBFSXFS_INODE_FLAGS
-{
-	LIBFSXFS_INODE_FLAG_COMPRESSED_DATA				= 0x00000200UL,
-
-	LIBFSXFS_INODE_FLAG_HAS_EXTENTS					= 0x00080000UL,
-
-	LIBFSXFS_INODE_FLAG_INLINE_DATA					= 0x10000000UL,
-};
-
-#define LIBFSXFS_INODE_NUMBER_ROOT_DIRECTORY				2
-
-#define LIBFSXFS_DIRECTORY_ENTRIES_TREE_MAXIMUM_NUMBER_OF_SUB_NODES	257
-#define LIBFSXFS_MAXIMUM_CACHE_ENTRIES_BLOCKS				8
-#define LIBFSXFS_MAXIMUM_CACHE_ENTRIES_INODES				32
-
-#define LIBFSXFS_MAXIMUM_RECURSION_DEPTH				256
 
 #endif /* !defined( _LIBFSXFS_INTERNAL_DEFINITIONS_H ) */
 
