--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -13,6 +13,8 @@ AM_CPPFLAGS = \
 	@LIBBFIO_CPPFLAGS@ \
 	@LIBFCACHE_CPPFLAGS@ \
 	@LIBFDATA_CPPFLAGS@ \
+	@LIBFDATETIME_CPPFLAGS@ \
+	@LIBFGUID_CPPFLAGS@ \
 	@PTHREAD_CPPFLAGS@ \
 	@LIBFSXFS_DLL_IMPORT@
 
@@ -38,9 +40,15 @@ EXTRA_DIST = \
 	$(check_SCRIPTS)
 
 check_PROGRAMS = \
+	fsxfs_test_block_directory_footer \
+	fsxfs_test_block_directory_header \
 	fsxfs_test_btree_block \
 	fsxfs_test_btree_header \
+	fsxfs_test_buffer_data_handle \
+	fsxfs_test_directory_entry \
+	fsxfs_test_directory_table_header \
 	fsxfs_test_error \
+	fsxfs_test_extent \
 	fsxfs_test_inode_btree \
 	fsxfs_test_inode_btree_record \
 	fsxfs_test_inode_information \
@@ -49,6 +57,30 @@ check_PROGRAMS = \
 	fsxfs_test_superblock \
 	fsxfs_test_support \
 	fsxfs_test_volume
+
+fsxfs_test_block_directory_footer_SOURCES = \
+	fsxfs_test_block_directory_footer.c \
+	fsxfs_test_libcerror.h \
+	fsxfs_test_libfsxfs.h \
+	fsxfs_test_macros.h \
+	fsxfs_test_memory.c fsxfs_test_memory.h \
+	fsxfs_test_unused.h
+
+fsxfs_test_block_directory_footer_LDADD = \
+	../libfsxfs/libfsxfs.la \
+	@LIBCERROR_LIBADD@
+
+fsxfs_test_block_directory_header_SOURCES = \
+	fsxfs_test_block_directory_header.c \
+	fsxfs_test_libcerror.h \
+	fsxfs_test_libfsxfs.h \
+	fsxfs_test_macros.h \
+	fsxfs_test_memory.c fsxfs_test_memory.h \
+	fsxfs_test_unused.h
+
+fsxfs_test_block_directory_header_LDADD = \
+	../libfsxfs/libfsxfs.la \
+	@LIBCERROR_LIBADD@
 
 fsxfs_test_btree_block_SOURCES = \
 	fsxfs_test_btree_block.c \
@@ -84,6 +116,42 @@ fsxfs_test_btree_header_LDADD = \
 	../libfsxfs/libfsxfs.la \
 	@LIBCERROR_LIBADD@
 
+fsxfs_test_buffer_data_handle_SOURCES = \
+	fsxfs_test_buffer_data_handle.c \
+	fsxfs_test_libcerror.h \
+	fsxfs_test_libfsxfs.h \
+	fsxfs_test_macros.h \
+	fsxfs_test_memory.c fsxfs_test_memory.h \
+	fsxfs_test_unused.h
+
+fsxfs_test_buffer_data_handle_LDADD = \
+	../libfsxfs/libfsxfs.la \
+	@LIBCERROR_LIBADD@
+
+fsxfs_test_directory_entry_SOURCES = \
+	fsxfs_test_directory_entry.c \
+	fsxfs_test_libcerror.h \
+	fsxfs_test_libfsxfs.h \
+	fsxfs_test_macros.h \
+	fsxfs_test_memory.c fsxfs_test_memory.h \
+	fsxfs_test_unused.h
+
+fsxfs_test_directory_entry_LDADD = \
+	../libfsxfs/libfsxfs.la \
+	@LIBCERROR_LIBADD@
+
+fsxfs_test_directory_table_header_SOURCES = \
+	fsxfs_test_directory_table_header.c \
+	fsxfs_test_libcerror.h \
+	fsxfs_test_libfsxfs.h \
+	fsxfs_test_macros.h \
+	fsxfs_test_memory.c fsxfs_test_memory.h \
+	fsxfs_test_unused.h
+
+fsxfs_test_directory_table_header_LDADD = \
+	../libfsxfs/libfsxfs.la \
+	@LIBCERROR_LIBADD@
+
 fsxfs_test_error_SOURCES = \
 	fsxfs_test_error.c \
 	fsxfs_test_libfsxfs.h \
@@ -92,6 +160,18 @@ fsxfs_test_error_SOURCES = \
 
 fsxfs_test_error_LDADD = \
 	../libfsxfs/libfsxfs.la
+
+fsxfs_test_extent_SOURCES = \
+	fsxfs_test_extent.c \
+	fsxfs_test_libcerror.h \
+	fsxfs_test_libfsxfs.h \
+	fsxfs_test_macros.h \
+	fsxfs_test_memory.c fsxfs_test_memory.h \
+	fsxfs_test_unused.h
+
+fsxfs_test_extent_LDADD = \
+	../libfsxfs/libfsxfs.la \
+	@LIBCERROR_LIBADD@
 
 fsxfs_test_inode_btree_SOURCES = \
 	fsxfs_test_inode_btree.c \
