--- a/libfsxfs/libfsxfs_definitions.h.in
+++ b/libfsxfs/libfsxfs_definitions.h.in
@@ -82,12 +82,20 @@ enum LIBFSXFS_FILE_TYPES
 
 #endif /* !defined( HAVE_LOCAL_LIBFSXFS ) */
 
+/* The secondary feature flags
+ */
+enum LIBFSXFS_SECONDARY_FEATURE_FLAGS
+{
+	LIBFSXFS_SECONDARY_FEATURE_FLAG_FILE_TYPE			= 0x00000200UL
+};
+
 /* The fork types
  */
 enum LIBFSXFS_FORK_TYPES
 {
 	LIBFSXFS_FORK_TYPE_INLINE_DATA					= 1,
-	LIBFSXFS_FORK_TYPE_EXTENTS					= 2
+	LIBFSXFS_FORK_TYPE_EXTENTS					= 2,
+	LIBFSXFS_FORK_TYPE_BTREE					= 3
 };
 
 #endif /* !defined( _LIBFSXFS_INTERNAL_DEFINITIONS_H ) */
