--- a/libfsxfs/libfsxfs_definitions.h.in
+++ b/libfsxfs/libfsxfs_definitions.h.in
@@ -98,5 +98,7 @@ enum LIBFSXFS_FORK_TYPES
 	LIBFSXFS_FORK_TYPE_BTREE					= 3
 };
 
+#define LIBFSXFS_MAXIMUM_RECURSION_DEPTH				256
+
 #endif /* !defined( _LIBFSXFS_INTERNAL_DEFINITIONS_H ) */
 
